Правки cropper + fix

--- a/fileAPI/css/fileAPI.css
+++ b/fileAPI/css/fileAPI.css
@@ -74,7 +74,7 @@ button.fapi-button,
 	position: relative;
 	overflow: hidden;
 	cursor: pointer;
-	padding: 2px 10px;
+	padding: 5px 10px;
 	vertical-align: middle;
 	border: 1px solid #ccc;
 
@@ -94,10 +94,11 @@ button.fapi-button,
 
 
 	.fapi-buttont-text {
-		
+		color: #333 ;
+		line-height: 1.2;
 			}	
 	.fapi-button-hover	.fapi-buttont-text{
-/*		color:#960;*/
+
 	}
 	
 	
@@ -244,7 +245,8 @@ button.fapi-button,
 			
 .fapi-b-file-bar {
 	padding-top: 4px;
-}			
+}	
+
 .fapi-b-file-left {
 	float: left;
 	margin: 4px 10px 0 0px;
@@ -319,6 +321,9 @@ button.fapi-button,
 	padding: 4px 5px;
 	background: rgba(255,255,255,.8);
 	border-radius: 5px;
+}
+.align_center{
+	text-align: center;
 }
 .fileapi_form_avatar .fapi-b-file{
 	border:none;
@@ -497,7 +502,6 @@ ul.fapi-dropdown > li  > ul > li.head{
 
 /* popup */
 
-
 .fapi_popup_body {
 	position: relative;
 	background-color: #f5f5f5;
@@ -526,8 +530,8 @@ ul.fapi-dropdown > li  > ul > li.head{
 }
 
 .fapi_popup_body .imgprev{
-	width: 130px;
-	height: 130px;
+	width: 100px;
+	height: 100px;
 	overflow: hidden;
 	margin-bottom: 0.5em;
 }
